tests/fixtures/functional_patterns/negative/n38_print.rs
fn log_message(msg: &str) {
    println!("{}", msg);
}
